# surface-analysis

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
analysis/: 01-subject-analysis.md  02-python-packages.md  03-proposed-pipeline.md
docs/: ISO_STANDARDS.md
scripts/: analyze_yann.py  compare_mountainsmap.py
src/surface_analysis/: __init__.py  abbott_firestone.py  decomposition.py  io.py  surface.py  viz.py
src/surface_analysis/transforms/: __init__.py  _base.py  filtering.py  interpolation.py  projection.py
tests/: test_decomposition.py  test_io.py  test_surface.py  test_transforms.py  test_viz.py
