[project]
name = "surface-analysis"
version = "0.1.0"
description = "Surface metrology analysis toolkit for microscope 3D topography data"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "h5py",
    "plotly",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/surface_analysis"]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]
