[project]
name = "surface-analysis"
version = "0.1.0"
description = "Surface metrology analysis toolkit for microscope 3D topography data"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "h5py",
    "plotly",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/surface_analysis"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "ruff>=0.15.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]
